unpackaged/main/default/objects/Update_GPS_Location__e/Update_GPS_Location__e.object-meta.xml
<CustomObject>
    <label>Update GPS Location</label>
    <pluralLabel>Update GPS Location</pluralLabel>
</CustomObject>