unpackaged/main/default/objects/Update_GPS_Location__e/fields/ACG_Vehicle_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Location_Address__c</fullName>
    <label>ACG Vehicle Location Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>