unpackaged/main/default/objects/Update_GPS_Location__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>