unpackaged/main/default/objects/Update_GPS_Location__e/fields/Member_Location_TZ_Offset__c.field-meta.xml
<CustomField>
    <fullName>Member_Location_TZ_Offset__c</fullName>
    <label>Member Location TZ Offset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>