unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Geolocation_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Geolocation_Latitude__c</fullName>
    <label>Vehicle Geolocation Latitude</label>
    <length>30</length>
    <type>Text</type>
</CustomField>