unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Geolocation_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Geolocation_Longitude__c</fullName>
    <label>Vehicle Geolocation Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>