unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location_City__c</fullName>
    <label>Vehicle Location City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>