unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location_Country__c</fullName>
    <label>Vehicle Location Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>