unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location_Postal_Code__c</fullName>
    <label>Vehicle Location Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>