unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location_State__c</fullName>
    <label>Vehicle Location State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>