unpackaged/main/default/objects/Update_GPS_Location__e/fields/Vehicle_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location_Street__c</fullName>
    <label>Vehicle Location Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>